test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_abi_names/stdout.snap
---
source: test/src/snapshot/mod.rs
---
> forc build --path test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_abi_names
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_abi_names
   Compiling library std (sway-lib-std)
   Compiling contract attributes_invalid_abi_names (test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_abi_names)
error: Duplicated name found for renamed ABI type.
 --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_abi_names/src/lib.sw:9:19
  |
...
4 | struct MyStruct {}
  | ------------------ help: This is the existing attribute
...
9 | #[abi_name(name = "SameName")]
  |                   ^^^^^^^^^^
  |
  = help: The name must be a valid Sway identifier 
____

error: Duplicated name found for renamed ABI type.
  --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_abi_names/src/lib.sw:12:19
   |
...
10 | struct MyStruct1 {}
   | ------------------- help: This is the existing attribute
11 | 
12 | #[abi_name(name = "SameName")]
   |                   ^^^^^^^^^^
   |
   = help: The name must be a valid Sway identifier 
____

error: Invalid name found for renamed ABI type.
  --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_abi_names/src/lib.sw:15:19
   |
...
15 | #[abi_name(name = "")]
   |                   ^^
   |
   = help: The name must be a valid Sway identifier and cannot be empty
____

error: Invalid name found for renamed ABI type.
  --> test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_abi_names/src/lib.sw:18:19
   |
...
18 | #[abi_name(name = "this !s n0t an identif1er")]
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: The name must be a valid Sway identifier
____

  Aborting due to 4 errors.
error: Failed to compile attributes_invalid_abi_names
